2007-07-11  Andreas Kupries  <andreask@activestate.com>

	* tests/cat.test: Added proper 'package require Expect'
	* tests/expect.test: to the test setup code (JeffH).
	* tests/logfile.test:
	* tests/pid.test:
	* tests/send.test:
	* tests/spawn.test:
	* tests/stty.test:

	* exp_command.c: Reformatted overlong lines, whitespace,
	* expect.c: comments. Added braces to some if-constructs.
	* exp_inter.c: Reworked if-constructs interleaved with
	* exp_tty.c: #if for better formatting in emacs.

	* Dbg.c: Added note about unhandled cases in a switch.
	* exp_chan.c: Added code to suppress unhandled warning for
	  unreachable code.
	* exp_command.c: Removed unused variable.
	* expect.c: Removed unused static function, added code to suppress
	  unhandled warning for unreachable code.

	* exp_command.c: Fixed typo in comment.

2007-06-28  Andreas Kupries <andreask@activestate.com>

	* Merged changes from the official version 5.44.1 of expect into
	  the SF sources. See the details below.

	  --------------------
	  Marius Schamsula <marius173@mchsi.xcom> reported tclconfig
	  missing, evidentally for new TEA.

	  Lots of massaging to fix TEAification of Makefile and configure
	  including that version numbers will now be full three part.

	  Daniel Wong <danielwong@berkeley.xedu> noted the home page
	  should note that Wikipedia has a very readable entry for Expect.

	  Andre Alves <aalves@escloyalty.xcom> noted passmass needed some
	  fixes to handle Solaris 9 passwd prompt changes.

	  Andreas fixed several things: changes to better support TEA, fix
	  debugger interaction with nonblocking mode, and probably other
	  things I'm overlooking.

	  Martin Dietze <di@fh-wedel.xde> noted that autoconf 2.59 is
	  confused by C comment after undefs in expect_cf.h.in.

	  Added additional code to unbuffer -p so that if a process
	  earlier in the pipeline exits, unbuffer attempts to recover any
	  remaining output from the spawned proc before unbuffer itself
	  exits.
